[package]
name = "bc"
version = "0.0.0"
edition = "2021"
authors = ["Giacomo Milligan  <giaki3003@gmail.com>"]
description = "Best-chain transaction and block handling simulator"

[dependencies]
util = { path = "../util" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[features]
default = []
doc = []

[lib]
doc = true