[package]
name = "bft"
version = "0.0.0"
edition = "2021"
authors = ["Giacomo Milligan  <giaki3003@gmail.com>"]
description = "Byzantine Fault-Tolerant protocol simulator"

[dependencies]
util = { path = "../util" }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
async-std = { version = "1.11", features = ["attributes"] }
futures = "0.3"
log = "0.4"

[features]
default = []
doc = []

[lib]
doc = true