[package]
name = "util"
version = "0.0.0"
edition = "2021"
authors = ["Giacomo Milligan  <giaki3003@gmail.com>"]
description = "Utility functions and types for the simulator"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"          # Provides the logging API
simple_logger = "1.12" # A lightweight logger implementation
